<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_grey"
    tools:context=".MainActivity">

    <!-- About Us -->
    <android.support.v7.widget.CardView
        android:id="@+id/cview_about_us"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:backgroundTint="@color/colorPrimary"
        android:layout_marginLeft="@dimen/margin_fifteen"
        android:layout_marginRight="@dimen/margin_fifteen"
        android:layout_marginTop="@dimen/margin_twenty"
        android:elevation="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:context=".MainActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/padding_ten"
                android:orientation="vertical" >

                <!-- Begin Detail Section -->
                <LinearLayout
                    android:id="@+id/detailSection"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="@dimen/margin_ten"
                    android:layout_marginRight="@dimen/margin_ten"
                    android:background="@color/colorPrimary"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/padding_ten"
                    android:paddingTop="@dimen/padding_twenty" >

                    <TextView
                        android:id="@+id/aboutUsDesc1ID"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_white"
                        android:text="@string/menu_about_us_desc1"
                        android:textSize="@dimen/text_fifteen"
                        android:paddingBottom="@dimen/padding_five"
                        android:paddingLeft="@dimen/padding_ten"
                        android:paddingRight="@dimen/padding_ten"
                        android:paddingTop="@dimen/padding_three" />

                    <TextView
                        android:id="@+id/aboutUsDesc2ID"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_white"
                        android:text="@string/menu_about_us_desc2"
                        android:textSize="@dimen/text_fifteen"
                        android:paddingBottom="@dimen/padding_five"
                        android:paddingLeft="@dimen/padding_ten"
                        android:paddingRight="@dimen/padding_ten"
                        android:paddingTop="@dimen/padding_three" />

                    <TextView
                        android:id="@+id/aboutUsDesc3ID"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_white"
                        android:text="@string/menu_about_us_desc3"
                        android:textSize="@dimen/text_fifteen"
                        android:paddingBottom="@dimen/padding_five"
                        android:paddingLeft="@dimen/padding_ten"
                        android:paddingRight="@dimen/padding_ten"
                        android:paddingTop="@dimen/padding_three" />

                    <TextView
                        android:id="@+id/aboutUsDesc14D"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_white"
                        android:text="@string/menu_about_us_desc4"
                        android:textSize="@dimen/text_fifteen"
                        android:paddingBottom="@dimen/padding_five"
                        android:paddingLeft="@dimen/padding_ten"
                        android:paddingRight="@dimen/padding_ten"
                        android:paddingTop="@dimen/padding_three" />

                    <TextView
                        android:id="@+id/aboutUsDesc5ID"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_white"
                        android:text="@string/menu_about_us_desc5"
                        android:textSize="@dimen/text_fifteen"
                        android:paddingBottom="@dimen/padding_five"
                        android:paddingLeft="@dimen/padding_ten"
                        android:paddingRight="@dimen/padding_ten"
                        android:paddingTop="@dimen/padding_three" />

                </LinearLayout>
                <!-- End Detail Section -->

            </LinearLayout>

        </ScrollView>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>




